依赖冲突解决

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,7 +8,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version>
+        <version>3.2.0</version> <!-- 或者更新到最新稳定版本 -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.library</groupId>
@@ -95,4 +96,4 @@
             </plugin>
         </plugins>
     </build>
-</project> 
+</project>
