--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /build/
 /out/
 
-# 依赖目录
+# 前端依赖目录
+/frontend/node_modules/
 /node_modules/
 /.pnp/
 .pnp.js
@@ -15,12 +16,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# 本地环境变量文件
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # IDE和编辑器文件
 .idea/
@@ -37,7 +32,7 @@ yarn-error.log*
 # 测试覆盖率报告
 /coverage/
 
-# 生产构建文件
+# 前端构建文件
 /frontend/dist/
 /frontend/build/
 
@@ -66,5 +61,10 @@ Desktop.ini
 # 部署相关
 /docker-volumes/
 
-# 前端中的默认图片（可以手动添加，避免Git忽略）
+# 缓存文件
+.cache
+.temp
+.mf
+
+# 保留的文件（不忽略）
 !/frontend/public/default-book-cover.jpg 
