--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "axios": "^1.4.0",
     "element-plus": "^2.3.8",
+    "pinia": "^2.1.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "pinia": "^2.1.4"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "vite": "^4.4.0"
   }
-} 
+}
