--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,21 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "serve": "vite preview --port 3000"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "element-plus": "^2.3.8",
-    "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
+    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.27",
+    "autoprefixer": "^10.4.14",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "vite": "^4.4.0"
-  }
+  },
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
