--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "echarts": "^5.6.0",
     "element-plus": "^2.3.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.27",
-    "autoprefixer": "^10.4.14",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.0"
   },
   "main": "vite.config.js",
