--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,4 +33,8 @@ springdoc.api-docs.path=/api-docs
 
 # Jackson配置
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=Asia/Shanghai 
+spring.jackson.time-zone=Asia/Shanghai
+
+# JWT Configuration
+jwt.secret=your-very-very-very-very-very-very-very-very-very-very-very-long-secret
+jwt.expiration=86400000 
