--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,8 +28,10 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # OpenAPI（Swagger）配置
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
 
 # Jackson配置
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
